# anvil

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  licenserc.toml
.github/workflows/: ci.yaml  pr-check-ci.yml
crates/gateway/: Cargo.toml  build.rs
crates/gateway/src/: admission.rs  auth.rs  config.rs  dispatcher.rs  grpc_client.rs  handlers.rs  logging.rs  main.rs  middleware.rs  otel.rs  request_context.rs  router.rs  routes.rs  server.rs  trace_context.rs
crates/matching/: BENCHMARK-zh.md  Cargo.toml  README_BENCHMARK-zh.md  build.rs
crates/matching/benches/: engine_throughput.rs
crates/matching/benches/common/: metrics.rs  mod.rs  order_generator.rs
crates/matching/configs/: bench.toml
crates/matching/proto/: matching.proto
crates/matching/src/: client.rs  config.rs  lib.rs  logging.rs  main.rs  matcher.rs  orderbook.rs  otel.rs  recovery.rs  server.rs  types.rs
crates/matching/src/engine/: control.rs  mod.rs  state.rs
crates/matching/src/event/: buffer.rs  mod.rs  storage.rs  writer.rs
crates/matching/src/journal/: memory.rs  mod.rs
crates/matching/src/queue/: mod.rs
crates/matching/src/snapshot/: mod.rs  snapshotter.rs  storage.rs
crates/matching/tests/: integration_test.rs  logging_test.rs  recovery_test.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: client.rs  lib.rs  signing.rs  types.rs
crates/settlement/: Cargo.toml  build.rs
crates/settlement/proto/: settlement.proto
crates/settlement/src/: config.rs  lib.rs  main.rs  server.rs  submitter.rs  transaction.rs  validator.rs
crates/settlement/src/chains/: ethereum.rs  mod.rs  solana.rs
docs/: README-zh.md  architecture-guide-zh.md  order-admission-contract-zh.md  order-admission-contract.md  quick-start-zh.md  routing-and-matching-zh.md
scripts/: analyze_results.py  bench_ack.sh  monitor.sh  run_all_benchmarks.sh  run_ghz_benchmarks.sh
