[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["chenjjiaa"]

[workspace]
resolver = "3"
members = [
    "crates/gateway",
    "crates/matching",
    "crates/settlement",
    "crates/sdk",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
config = "0.14"
envy = "0.4"
