[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["itscheems"]

[workspace]
resolver = "3"
members = [
    "crates/gateway",
    "crates/matching",
    "crates/settlement",
    "crates/sdk",
]

[workspace.dependencies]
# Error handling
anyhow = "^1"
thiserror = "^1"

# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Async runtime
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }

# gRPC
tonic = "^0.14"
prost = "^0.14"
prost-types = "^0.14"
tonic-build = { version = "^0.14" }
tonic-prost-build = { version = "^0.14" }
tonic-prost = { version = "^0.14" }

# Logging
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "^1", features = ["v4"] }
hex = "^0.4"
config = "^0.14"
envy = "^0.4"
dashmap = "^6"

# Cryptography (shared between gateway and sdk)
ed25519-dalek = { version = "^2", features = ["rand_core"] }
k256 = { version = "^0.13", features = ["ecdsa", "sha256"] }
sha2 = "^0.10"
