[package]
name = "anvil-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anvil-sdk = { path = "../sdk" }
anvil-matching = { path = "../matching" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }

