[package]
name = "anvil-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tonic-prost-build = { workspace = true }
anyhow = { workspace = true }

[dependencies]
anvil-sdk = { path = "../sdk" }
anvil-matching = { path = "../matching" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
actix-web = { version = "^4", features = ["macros"] }
actix-rt = "^2"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = "^0.22"
num_cpus = "^1"
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
config = { workspace = true }
dotenv = "^0.15"
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
governor = "^0.10"
dashmap = { workspace = true }
moka = { workspace = true }
opentelemetry = { version = "^0.21", features = ["trace"] }
opentelemetry_sdk = { version = "^0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "^0.14", features = ["trace", "grpc-tonic"] }
lazy_static = "^1"
