[package]
name = "anvil-matching"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "anvil_matching"
path = "src/lib.rs"

[[bin]]
name = "anvil-matching"
path = "src/main.rs"

[dependencies]
anvil-sdk = { path = "../sdk" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
uuid = { version = "1", features = ["v4"] }

