[package]
name = "anvil-matching"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "anvil_matching"
path = "src/lib.rs"

[[bin]]
name = "anvil-matching"
path = "src/main.rs"

[build-dependencies]
tonic-prost-build = { workspace = true }
anyhow = { workspace = true }

[dependencies]
anvil-sdk = { path = "../sdk" }
anvil-settlement = { path = "../settlement" }
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
uuid = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "^0.22"
opentelemetry = { version = "^0.21", features = ["trace"] }
opentelemetry_sdk = { version = "^0.31", features = ["trace"] }
tokio-stream = "^0.1"
config = { workspace = true }
dashmap = { workspace = true }
crossbeam = "^0.8"
