[package]
name = "anvil-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

