[package]
name = "anvil-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
rand = "^0.8"
reqwest = { version = "^0.12", features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

