[package]
name = "anvil-settlement"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anvil-sdk = { path = "../sdk" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
uuid = { version = "1", features = ["v4"] }

