[package]
name = "anvil-settlement"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "anvil_settlement"
path = "src/lib.rs"

[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }

[dependencies]
anvil-sdk = { path = "../sdk" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
# Blockchain SDKs (optional, can be enabled via features)
# solana-sdk = { version = "1", optional = true }
# ethers = { version = "2", optional = true, default-features = false, features = ["rustls"] }
